--------------------------------------------------------------------------------
Fusion 1.210 - February 28th, 2004
--------------------------------------------------------------------------------

- 02-14-04: Added Graphic support for Land protector: no effect though [Oatmeal]
- 02-14-04: Fixed Beat bane not giving bonus damage [Oatmeal]
- 02-14-04: Fixed Triple blow delay  [Oatmeal]
- 02-14-04: Fixed Guild Skill bug (#382) [beita]
- 02-14-04: Added Combo delay for combos, needs delay time for Triple blow [Oatmeal]
- 02-14-04: Fixed bug #498, forging list error with mini-furnaces [Colus]
- 02-12-04: Buffs are now removed on job change. [Darkhelmet]
- 02-12-04: Merged Colus's Cloaking Fix, my bad before. [Darkhelmet]
- 02-12-04: Fixed Passive weapon skills, now display amount of ATK increased. [Darkhelmet]
- 02-11-04: Fixed SQL-Crash when viewing Guild information. [AlexKreuz]
- 02-11-04: Fusion now allows editing Player and Character Data while Fusion is running. [AlexKreuz]
- 02-11-04: Fixed being able to Pharmacy w/o books. [Colus]
- 02-10-04: Added SQL CharacterDelete Check. [AlexKreuz]
- 02-10-04: Edited a few default INI options for ease of use. [AlexKreuz]
- 02-10-04: Updated & Cleaned up MySQL Code. [AlexKreuz]
- 02-10-04: Added Michen's Beta MySQL Version. [AlexKreuz]
- 02-10-04: Fixed Bug #256, Backstab now works PvP. [Darkhelmet]
- 02-10-04: Fixed Bug #147, Monsters cannot cast while silenced. [Darkhelmet]
- 02-09-04: Applied Pathfinding Algorithm v2.0 to Monsters' Target Finding procedures. [AlexKreuz]
- 02-09-04: Updated Poison Effect PvP, just needs to reduce HP now. [Darkhelmet]
- 02-09-04: Updated Venom Dust PvP. [Darkhelmet]
- 02-08-04: Fixed Bug #455, MDEF can now stack from items. [Darkhelmet]
- 02-08-04: Added Music to Bard SKills. [Darkhelmet]
- 02-08-04: Updated Stone Curse PvP, not working fully. [Darkhelmet]
- 02-08-04: Updated Frost Driver PvP. [Darkhelmet]
- 02-08-04: Updated Status Effects on players, not perfect yet. [Darkhelmet]